--- a/resources/assets/sass/front/styles/custom.scss
+++ b/resources/assets/sass/front/styles/custom.scss
@@ -2170,7 +2170,7 @@ body{
         &.service-requirment{
             padding-top: 3px;
             position: relative;
-            top: -8px;            
+            top: 0px;            
             i.icon-brightness-down{
                 font-size: 21px;
                 position: relative;
